--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon(1).ico">
+  <meta name="description" content="An exploration on the qualifications of Shahmir Taqi, aspiring business marketing leader.">
+  <meta name="author" content="862337540">
 
-  <title>John Doe - Business Administration</title>
+  <title>Shahmir Taqi - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Shahmir Taqi</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/shahmirtaqi.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Shahmir Taqi
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Marketing📚</div>
+        <p class="lead mb-4">My name is Shahmir Taqi. I currently own a degree in Business Marketing, with my alma mater being the University of California, Riverside. I would describe myself as a confident, outgoing, and collaborative individual. At the current moment, I am compiling as much experience as I can in my field in order to maximize my ability to ensure quality work to anywhere that decides I am fit to be in. For any company that expresses interest in me as a candidate, just know that, that from the first day, I will spend my time making sure that I prove the description I have given myself. From the day I was a child, I have done nothing but prove myself to people.<br><br>
 
-        Enter bio here<br><br>
+        What are my hobbies? Well, most of my hobbies are befit of the average person. I am the type to enjoy a nice video game after a long day of work. However, in order to actually stimulate my brain, I usually play the kinds of video games with riveting stories and lessons to teach about life itself. I am the type of person to be all about self improvement. That is why, as well as playing those certain types of video games, I also divulge myself in reading various types of self improvement books. The most recent one I am reading is called "Be Yourself, or Be Better" by Manuel Cervantes. When I am not trying to spend time improving myself, I am spending time making art, dabbling in bonsai, and going outside to experience the world around me. I, myself, am an avid rock climber. Through this skill, I have a ton of excellent memories of being able to explore the world from a new perspective. Instead of a 2D plane of exploration, I am able to experience different places in a more three dimensional way. Details like those are something that I always love to think about. <br><br>
 
-        Enter bio here
+        My qualifications include the following: I am advanced in multiple Windows programs, such as Excel, Word, and PowerPoint. For all of these programs, I have the required qualifications and certifications to show that I am fully prepared to take on any task that requires these programs. In terms of languages, I am fluent in four different ones, including Spanish, French, Hindi, and of course, English. In college, I also signed up to receive many certifications, including CPR and first aid. During my experience as an EMT, I was constantly under a pressure filled environment. This environment kept me on my toes and made me excel in fast paced environments. If any compnay decides I am worth their time, just know that any situation they put me in will be faced with utmost determination and a drive to strive in any sort of environment that I am put into. If you need an out of the box thinker, then sign me right up. There were many times during my pursuit of my degree where I had to think of unconventional ways to succeed. If you need a leader, than look no more. There were many times during my past job experiences where I had to step up as a leader. Usually, due to my more extraverted personality, I was effeciently able to connect everyone on the team, and ensure that success would be gauranteed no matter the situation we had to face.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/shahmeme_/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/ShahmirTaqi">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.youtube.com/channel/UC_zQ6VqcFA00fFbYZMMVqBQ">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:staqi003@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,43 +92,43 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Crew Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.mcdonalds.com/us/en-us.html">McDonald's</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Handled cash and card orders<br> 
+              • Collaborated with other crew members to ensure quick and quality service<br>
+              • Experience with customer service and dealing with customer complaints<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">December 2020 - June 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Personal Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.mcdonalds.com/us/en-us.html">TC Services</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for filing reports and meetings<br>
+              • Maintained scheduling for CEO<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2022 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Security Guard</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.securitasinc.com/">Securitas Inc</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Observe and report suspicious behavior<br>
+            • Keep out transients and homeless<br>
+            • Checked in HOA guests and dealt with resident questions<br>
+            • Collaborated with other guards to ensure a safe environment<br>
 
           </p>
           </div>
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Business Economics</div>
+            <div>Minor in Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2022 - December 2026</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/me at work.jpg" width="500px">
+            <img src="img/leader.jpg" width="500px"><br>
+            <img src="img/awesome certification.jpg" width="500px">
+            <img src="img/awesome degree.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Shahmir Taqi</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
